If applied, this commit will update the tag in the template 'formEvent.html'

--- a/src/main/resources/templates/event/formEvent.html
+++ b/src/main/resources/templates/event/formEvent.html
@@ -13,7 +13,7 @@
 	<form method="post">
 		Nome: <input type="text" value="" name="name" />
 		Local: <input type="text" value="" name="location" />
-		Data: <input type="text" value="" name="date" />
+		Data: <input type="date" value="" name="date" />
 		Horário: <input type="text" value="" name="time" />
 
 		<button type="submit">Salvar</button>
