If applied, this commit will update the template 'formEvent.html'

--- a/src/main/resources/templates/event/formEvent.html
+++ b/src/main/resources/templates/event/formEvent.html
@@ -4,7 +4,10 @@
 
 <head>
 	<title>Spring Thymeleaf</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta http-equiv="Content-Type" name="viewport" 
+		content="text/html; width=device-width, initial-scale=1.0; charset=UTF-8" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
 </head>
 
 <body>
@@ -19,7 +22,7 @@
 		<button type="submit">Salvar</button>
 	</form>
 
-
+	<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
