--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 
 	<h1>Olá Mundo Spring Boot Framework !!!</h1>
 	<h2>Lista de Eventos</h2>
-	<h3><a class="waves-effect waves-light btn"><i class="material-icons right">add_circle_outline</i>Cadastrar
+	<h3><a href="/registration-events" class="waves-effect waves-light btn"><i class="material-icons right">add_circle_outline</i>Cadastrar
 			Evento</a></h3>
 	<table>
 		<thead>
